@@ -832,11 +832,11 @@ runtime/prims.c : runtime/primitives
 	 echo; \
 	 sed -e 's/.*/extern value &(void);/' $<; \
 	 echo; \
-	 echo 'c_primitive caml_builtin_cprim[] = {'; \
+	 echo 'const c_primitive caml_builtin_cprim[] = {'; \
 	 sed -e 's/.*/  &,/' $<; \
 	 echo '  0 };'; \
 	 echo; \
-	 echo 'char * caml_names_of_builtin_cprim[] = {'; \
+	 echo 'const char * const caml_names_of_builtin_cprim[] = {'; \
 	 sed -e 's/.*/  "&",/' $<; \
 	 echo '  0 };') > $@
 
